--- a/myapp/app/src/main/webapp/WEB-INF/templates/about.html
+++ b/myapp/app/src/main/webapp/WEB-INF/templates/about.html
@@ -8,11 +8,8 @@
 
 <div data-th-replace="header :: header">머리말</div>
 
-<h1>오류!</h1>
-
-<p data-th-if="${message != null}" data-th-text="${message}">오류 메시지</p>
-
-<pre data-th-if="${detail != null}" data-th-text="${detail}">상세 오류 메시지</pre>
+<h1>과제 관리 시스템 소개</h1>
+<p>이 사이트는 수업의 과제를 관리하는 서비스를 제공합니다.</p>
 
 <div data-th-replace="footer :: footer">꼬리말</div>
 
