--- a/myapp/app/src/main/webapp/WEB-INF/templates/header.html
+++ b/myapp/app/src/main/webapp/WEB-INF/templates/header.html
@@ -5,7 +5,8 @@
   <title>비트캠프 데브옵스 5기</title>
 </head>
 <body>
-<header data-th-fregment="header">
+
+<header data-th-fragment="header">
   <img src='https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png'>
   <a href='/app/assignment/list'>과제</a>
   <a href='/app/board/list?category=1'>게시글</a>
@@ -14,12 +15,12 @@
 
   <span data-th-if="${session.loginUser != null}"
         data-th-text="${session.loginUser.name}">홍길동</span>
-  <a data-th-if="${session.loginUser != null}" data-th-text="로그아웃" href='/app/auth/logout'>로그아웃</a>
+  <a data-th-if="${session.loginUser != null}" href='/app/auth/logout'>로그아웃</a>
 
-  <a data-th-if="${session.loginUser == null}" data-th-text="로그인" href='/app/auth/form'>로그인</a>
-
+  <a data-th-if="${session.loginUser == null}" href='/app/auth/form'>로그인</a>
 
   <a href='/app/about'>소개</a>
 </header>
+
 </body>
 </html>
