--- a/myapp/app/src/main/webapp/WEB-INF/templates/member/list.html
+++ b/myapp/app/src/main/webapp/WEB-INF/templates/member/list.html
@@ -24,8 +24,7 @@
     <td data-th-data="*{no}">100</td>
     <td>
       <img data-th-if="*{photo}"
-           data-th-src="@{'https://kr.object.ncloudstorage.com/bitcamp-devops5-143/member/' + *{photo}}"
-           height='20px'
+           data-th-src="@{'https://66owc0gv2691.edge.naverncp.com/f3hnPRlrc7/member/' + *{photo}(type=f,w=20,h=20,ttype=jpg)}"
            src="/img/default-photo.jpeg">
       <img data-th-unless="*{photo}" height='20px' src='/img/default-photo.jpeg'>
       <a data-th-href="@{view(no=*{no})}" data-th-text="*{name}" href="view.html">홍길동</a></td>
