--- a/myapp/app/src/main/webapp/WEB-INF/templates/member/view.html
+++ b/myapp/app/src/main/webapp/WEB-INF/templates/member/view.html
@@ -17,8 +17,7 @@
     <a data-th-href="@{'https://kr.object.ncloudstorage.com/bitcamp-devops5-143/member/' + *{photo}}"
        data-th-if="*{photo}">
       <img
-          data-th-src="@{'https://kr.object.ncloudstorage.com/bitcamp-devops5-143/member/' + *{photo}}"
-          height='80px'></a><br>
+          data-th-src="@{'https://66owc0gv2691.edge.naverncp.com/f3hnPRlrc7/member/' + *{photo}(type=f,w=80,h=80,ttype=jpg)}"></a><br>
     <a data-th-unless="*{photo}" href='/img/default-photo.jpeg'>
       <img height='80px' src='/img/default-photo.jpeg'></a><br>
     <input name='file' type='file'>
